Set correct z-index

--- a/src/client/components/homepage/homepage.scss
+++ b/src/client/components/homepage/homepage.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     flex-direction: row;
-    z-index: 9999;
+    z-index: 1;
     position: relative;
     text-align: center;
 
@@ -35,6 +35,4 @@
         border-radius: 30px;
         padding-top: 5px;
     }
-
-
 }
